[package]
name = "mj-tpl-backup"
description = "A tool for performing backups of Mailjet templates"
version = "0.1.0"
authors = ["Christoffer Lindahl Hassel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
home = "0.5.4"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
toml = "0.7.3"
